# YumBook

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  drizzle.config.ts  package.json  rsbuild.config.ts
.next/: trace
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0a3bebc01621_added_user_recipe_follows_and_comment_.py  13d88e0bf5b9_update_user_table.py  2cea83ddd92f_update_user_table.py  509731984802_update_user_table.py  c91727fc4b9e_update_user_table.py  fe5e3abb2ee4_update_recipereaction_table.py
backend/app/api/: deps.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: config.py  db.py
backend/app/database/: __init__.py  session.py
backend/app/database/migrations/: env.py  script.py.mako
backend/app/database/migrations/versions/: 1a578961f933_fix.py  3305221c53f7_alter_column_dietary_restrictions_.py  54b85d119c09_new_tables.py  5abf312c1acc_added_comments_and_like_table.py  708d96b5a88c_added_tables.py  7bf4e8bf4a43_added_a_new_column_in_recipe_table.py  d1ac4e418880_hello.py
backend/app/models/: __init__.py  ingredients.py  recipe.py  token.py  user.py
backend/app/routers/: __init__.py  main.py
backend/app/routers/api/: auth.py  recipe.py  user.py
backend/app/services/: recipe_service.py  user_service.py
backend/app/utils/: util.py
frontend/: .gitignore  biome.json  bun.lockb  components.json  modify-openapi.js  modify-openapi.ts  openapi-ts.config.ts  openapi.json  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  index.tsx  routeTree.gen.ts
frontend/src/client/: index.ts  sdk.gen.ts  services.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: More.tsx  NotFound.tsx  RecipeCard.tsx  app-sidebar.tsx  footer-sidebar.tsx
frontend/src/components/Home/: Post.tsx  PostDrawerDialog.tsx  Story.tsx
frontend/src/components/auth/: Login.tsx
frontend/src/components/home/: Post.tsx  ShowRecipe.tsx
frontend/src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input.tsx  label.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
frontend/src/hooks/: use-auth.ts  use-media-query.ts  use-optimistic.ts  use-recipe.ts  use-responsive-ui.tsx  use-share-post.tsx  use-toast.ts  use-user.ts
frontend/src/lib/: data.json  definitions.ts  utils.ts
frontend/src/routes/: __root.tsx  _layout.tsx  index.lazy.tsx  index.tsx
frontend/src/routes/_layout/: $profile.tsx  $recipe.tsx  activity.tsx  create.tsx  explorer.tsx  home.tsx  message.tsx  saved.tsx  settings.tsx
frontend/src/routes/_layout/accounts/: $profile.tsx  edit.tsx
frontend/src/routes/_layout/p/: $post.tsx  $postId.tsx
frontend/src/routes/auth/: forgot-password.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
src/: App.tsx  routeTree.gen.ts
src/server/db/: schema.ts
yumbook-backend/: alembic.ini  pyproject.toml
yumbook-backend/app/: config.py  main.py
yumbook-backend/app/database/migrations/: env.py  script.py.mako
yumbook-backend/app/database/migrations/versions/: 2c8278e41c5a_create_user_table.py
yumbook-backend/app/models/: __init__.py  user.py
yumbook-backend/app/routers/: main.py
yumbook-backend/app/routers/api/: auth.py  user.py
yumbook-backend/app/services/: __init__.py  auth_service.py  user_service.py
yumbook-backend/app/utils/: __init__.py  auth.py  deps.py  util.py
yumbook-frontend/: Dockerfile  biome.json  bun.lockb  components.json  modify-openapi.ts  openapi-ts.config.ts  openapi.json  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.json
yumbook-frontend/src/: index.css  index.tsx  routeTree.gen.ts
yumbook-frontend/src/client/: services.gen.ts  types.gen.ts
yumbook-frontend/src/client/@tanstack/: react-query.gen.ts
yumbook-frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  form.tsx  hover-card.tsx  select.tsx  sheet.tsx  toaster.tsx  tooltip.tsx
yumbook-frontend/src/hooks/: use-auth.ts  use-theme-store.ts  use-toast.ts  use-user-store.ts  use-user.ts
yumbook-frontend/src/lib/: utils.ts
yumbook-frontend/src/routes/: __root.tsx  _layout.tsx  index.lazy.tsx
yumbook-frontend/src/routes/_layout/: $profile.tsx  create.tsx  explorer.tsx  home.tsx  profile.tsx  settings.tsx
yumbook-frontend/src/routes/auth/: forgot-password.tsx  login.tsx  reset-password.tsx  signup.tsx
